# VirtusInMorte

./: .gitignore  .gitmodules  CMakeLists.txt  test_client  test_client.cpp  test_interface.h  test_server  test_server.cpp
Resources/: 0.map.yaml  default.ui.yaml  forest0.blend  fragment.frag.glsl  fragment.glsl  instanced.vert.glsl  test.item.yaml  test.mat.yaml  unsampled.mat.yaml  vertex.glsl  vertex.vert.glsl
Source/Common/: Item.cpp  Log.cpp
Source/Include/: Common.hpp  Morte.hpp  Virtus.hpp
Source/Morte/: Server.cpp
Source/Virtus/: Application.cpp  Buffers.cpp  Graphics.cpp  Image.cpp  Map.cpp  Material.cpp  Mesh.cpp  Shader.cpp  Texture.cpp  Transform.cpp  UI.cpp  Vertex.cpp  Window.cpp
Virtus/: Application.cpp  Buffers.cpp  Context.cpp  Graphics.cpp  Image.cpp  Log.cpp  Map.cpp  Material.cpp  Mesh.cpp  Shader.cpp  SingleHeaderImplementation.c  Texture.cpp  Transform.cpp  UI.cpp  Vertex.cpp  Window.cpp
Virtus/Include/: Virtus.hpp
